--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
+asgiref==3.5.2
+Django==3.2.16
+django-cors-headers==3.13.0
+django-filter==22.1
+djangorestframework==3.14.0
+Markdown==3.4.1
+psycopg2==2.9.5
+pytz==2022.6
+sqlparse==0.4.3
